[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/Milletun.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/Interface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 41
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.0
margin_top = 3.0
margin_right = -9.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -73.5
margin_right = 168.0
margin_bottom = 73.5
custom_fonts/font = SubResource( 2 )
text = "NOMBRE DEL JUEGO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -83.0
margin_right = 109.0
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
